ParsedAggregationProjection should validate that top-level field names do not start with a '$'.

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Done
    • Priority: Major - P3
    • 3.3.10
    • Affects Version/s: 3.3.9
    • Component/s: Aggregation Framework
    • None
    • Fully Compatible
    • ALL
    • Query 17 (07/15/16)
    • 0
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      This is currently caught as an invariant failure in ParsedExclusionProjection, but should result in a failed operation.

            Assignee:
            Charlie Swanson
            Reporter:
            Charlie Swanson
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: