SERVER-24814 ParsedAggregationProjection should reject $-prefixed field names